<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioPacienteActivity">

  <EditText
      android:id="@+id/editTextNombresPaciente"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="60dp"
      android:ems="10"
      android:hint="@string/nombresPaciente"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

  <EditText
      android:id="@+id/editTextApellidosPaciente"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="96dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:hint="@string/apellidosPaciente"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextNombresPaciente" />

  <EditText
      android:id="@+id/editTextNumber"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="44dp"
      android:ems="10"
      android:inputType="number"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editTextDireccionPaciente"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="72dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:hint="@string/direccionPaciente"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextApellidosPaciente" />

  <Button
      android:id="@+id/buttonRegistrar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="72dp"
      android:text="@string/btnRegistrar"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextDireccionPaciente"
      app:layout_constraintVertical_bias="0.157" />
</androidx.constraintlayout.widget.ConstraintLayout>