<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipalActivity">

    <TextView
        android:id="@+id/textViewInforacionPaciente"
        android:layout_width="219dp"
        android:layout_height="186dp"
        android:text="Informacion Paciente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.278" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="331dp"
        android:layout_height="286dp"
        android:layout_marginTop="112dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonRegistroPaciente"
            style="@style/buttonMenuPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRegistrarPaciente" />

        <Button
            android:id="@+id/buttonVisitaPaciente"
            style="@style/buttonMenuPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnVisitaPaciente" />

        <Button
            android:id="@+id/buttonCorreoPaciente"
            style="@style/buttonMenuPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnEnviarCorreoPaciente" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>