<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisitaPacienteActivity">


    <TextView
        android:id="@+id/textViewDniVisitaPaciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:ems="13"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="301dp"
        android:layout_height="283dp"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDniVisitaPaciente">

        <EditText
            android:id="@+id/editTextPesoPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/pesoPaciente"
            android:inputType="numberDecimal"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/editTextTemperaturaPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/temperaturaPaciente"
            android:inputType="numberDecimal"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/editTextPresionPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/presionPaciente"
            android:inputType="numberDecimal"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/editTextSaturacionPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/nivelSaturacion"
            android:inputType="numberDecimal"
            android:textColorHint="@color/gray" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonRegistrarVisitaPaciente"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:text="@string/btnRegistrar"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TRIAJE"
        android:textColor="@color/sky_blue_dark"
        android:fontFamily="sans-serif"
        android:textFontWeight="700"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewDniVisitaPaciente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="71dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/doctor" />
</androidx.constraintlayout.widget.ConstraintLayout>